--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,6 +68,10 @@
             </script>
         {% endif %}
 
+        <script>
+            window.hubspotBase = '{{ hubspotBase }}';
+        </script>
+
         <script src="/dist/js/built.js"></script>
 
         <base href="/" />
