--- a/app/Resources/views/default-layout/header.html.twig
+++ b/app/Resources/views/default-layout/header.html.twig
@@ -1,7 +1,7 @@
 <header class="banner" role="banner">
     <div class="wrapper">
         <div class="clearfix banner-header">
-            <a class="banner-logo" href="/">
+            <a class="banner-logo" href="{{ hubspotBase }}/">
                 <img src="/dist/images/cp_logo.png" alt="City Pantry" />
             </a>
 
