--- a/app/Resources/views/nav/customer.html.twig
+++ b/app/Resources/views/nav/customer.html.twig
@@ -8,7 +8,7 @@
         <li role="presentation"><a tabindex="-1" href="/logout" role="menuitem">Log out</a></li>
     </ul>
 </li>
-<li><a class="hidden-sm" href="/faq">FAQ</a></li>
+<li><a class="hidden-sm" href="{{ hubspotBase }}/faq">FAQ</a></li>
 <li><a class="hidden-sm" href="/quote">Event quote</a></li>
 <li class="hidden-xs call">
     <span>Any questions? Call us:</span>
