--- a/src/web/templates/admin/orders.html
+++ b/src/web/templates/admin/orders.html
@@ -1,3 +1,5 @@
-<h1>Orders</h1>
+<div class="wrapper">
+    <h1>Orders</h1>
 
-<div ui-grid="orders.gridOptions" ui-grid-pagination id="orders-table"></div>
+    <div ui-grid="orders.gridOptions" ui-grid-pagination id="orders-table"></div>
+</div>
