--- a/src/web/templates/admin/users.html
+++ b/src/web/templates/admin/users.html
@@ -1,3 +1,5 @@
-<h1>Users</h1>
+<div class="wrapper">
+    <h1>Users</h1>
 
-<div ui-grid="gridOptions" ui-grid-pagination id="users-table"></div>
+    <div ui-grid="gridOptions" ui-grid-pagination id="users-table"></div>
+</div>
