--- a/app/Resources/views/angular.html.twig
+++ b/app/Resources/views/angular.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Users{% endblock %}
+{% block title %}Loading{% endblock %}
 
 {% block body %}
-    <main class="wrapper" ng-view>
+    <main role="main" ng-view>
     </main>
 {% endblock %}
