--- a/src/web/templates/admin/courier-orders.html
+++ b/src/web/templates/admin/courier-orders.html
@@ -1,3 +1,5 @@
-<h1>Courier Orders</h1>
+<div class="wrapper">
+    <h1>Courier Orders</h1>
 
-<div ui-grid="gridOptions" ui-grid-pagination id="courier-orders-table"></div>
+    <div ui-grid="gridOptions" ui-grid-pagination id="courier-orders-table"></div>
+</div>
