--- a/src/web/templates/admin/customer.html
+++ b/src/web/templates/admin/customer.html
@@ -1,11 +1,13 @@
-<h1>Customer {{ customer.id }}: {{ customer.user.name }}, {{ customer.company }}</h1>
+<div class="wrapper">
+    <h1>Customer {{ customer.id }}: {{ customer.user.name }}, {{ customer.company }}</h1>
 
-<p>Is paid on account? {{ customer.isPaidOnAccount ? 'Yes' : 'No' }}</p>
+    <p>Is paid on account? {{ customer.isPaidOnAccount ? 'Yes' : 'No' }}</p>
 
-<p>Customer since: {{ customer.dateAdded | date:'dd/MM/yyyy' }}</p>
+    <p>Customer since: {{ customer.dateAdded | date:'dd/MM/yyyy' }}</p>
 
-<p>Email: {{ customer.email }}</p>
+    <p>Email: {{ customer.email }}</p>
 
-<p>Phone number: {{ customer.phoneNumber }}</p>
+    <p>Phone number: {{ customer.phoneNumber }}</p>
 
-<p>User group: {{ customer.user.group.description }}</p>
+    <p>User group: {{ customer.user.group.description }}</p>
+</div>
