--- a/src/web/templates/admin/packages.html
+++ b/src/web/templates/admin/packages.html
@@ -1,3 +1,5 @@
-<h1>Packages</h1>
+<div class="wrapper">
+    <h1>Packages</h1>
 
-<div ui-grid="packages.gridOptions" ui-grid-pagination id="packages-table"></div>
+    <div ui-grid="packages.gridOptions" ui-grid-pagination id="packages-table"></div>
+</div>
