--- a/src/web/templates/admin/vendors.html
+++ b/src/web/templates/admin/vendors.html
@@ -1,3 +1,5 @@
-<h1>Vendors</h1>
+<div class="wrapper">
+    <h1>Vendors</h1>
 
-<div ui-grid="vendors.gridOptions" ui-grid-pagination id="vendors-table"></div>
+    <div ui-grid="vendors.gridOptions" ui-grid-pagination id="vendors-table"></div>
+</div>
