--- a/app/Resources/views/angular.html.twig
+++ b/app/Resources/views/angular.html.twig
@@ -5,4 +5,10 @@
 {% block body %}
     <main role="main" ng-view>
     </main>
+
+    <div class="state-loading">
+        <div class="spinner">
+            <img src="/dist/images/loading.gif" width="30" height="30" />
+        </div>
+    </div>
 {% endblock %}
