--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2990,6 +2990,7 @@ fieldset[disabled] .btn-primary.active {
 @import 'links.scss';
 @import 'footer.scss';
 @import 'modal.scss';
+@import 'loading.scss';
 @import 'admin/customers.scss';
 @import 'admin/general.scss';
 @import 'admin/orders.scss';
