--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -1,4 +1,6 @@
 <div class="wrapper">
+    <h1>Order {{ order.id }}</h1>
+
     <h2>Edit details</h2>
 
     <form class="admin-form" role="form" ng-submit="save()">
