Migrate to MongoDB.

--- a/src/web/templates/admin/customer.html
+++ b/src/web/templates/admin/customer.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <h1>Customer {{ customer.id }}: {{ customer.user.name }}, {{ customer.company }}</h1>
+    <h1>Customer {{ customer.humanId }}: {{ customer.user.name }}, {{ customer.company }}</h1>
 
     <p>Is paid on account? {{ customer.isPaidOnAccount ? 'Yes' : 'No' }}</p>
 
