--- a/src/web/templates/admin/edit-package.html
+++ b/src/web/templates/admin/edit-package.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <h1>Package {{ vendorPackage.id }}</h1>
+    <h1>Package {{ vendorPackage.humanId }}</h1>
 
     <form ng-submit="save()" role="form">
         <div class="form-group">
