--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <h1>Vendor {{vendor.id}}</h1>
+    <h1>Vendor {{vendor.humanId}}</h1>
 
     <form role="form" ng-submit="save()">
         <div class="form-group">
