View package page (not finished).

--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -6,7 +6,7 @@
 
         <ul class="packages">
             <li class="package british breakfast" ng-repeat="package in packages">
-                <a href="/package/{{ package.id }}-{{ package.name | slugify }}">
+                <a href="/package/{{ package.humanId }}-{{ package.name | slugify }}">
                     <div class="package-image-wrap">
                         <div class="package-image" style="background-image: url('{{ package.images[0].medium }}');"></div>
                         <span class="btn btn-order">Order Now</span>
