--- a/src/web/templates/admin/customer.html
+++ b/src/web/templates/admin/customer.html
@@ -1,6 +1,12 @@
 <div class="wrapper">
     <h1>Customer {{ customer.humanId }}: {{ customer.user.name }}, {{ customer.company }}</h1>
 
+    <h2>History</h2>
+
+    <history-table history="customer.history"></history-table>
+
+    <h2>Details</h2>
+
     <p>Is paid on account? {{ customer.isPaidOnAccount ? 'Yes' : 'No' }}</p>
 
     <p>Customer since: {{ customer.dateAdded | date:'dd/MM/yyyy' }}</p>
