--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -1,6 +1,10 @@
 <div class="wrapper">
     <h1>Order {{ order.humanId }}</h1>
 
+    <h2>History</h2>
+
+    <history-table history="order.history"></history-table>
+
     <h2>Edit details</h2>
 
     <form class="admin-form" role="form" ng-submit="save()">
