Minor CSS tweaks.

--- a/src/web/scss/admin/general.scss
+++ b/src/web/scss/admin/general.scss
@@ -15,17 +15,20 @@
 
 history-table {
     display: block;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 
-    th, td {
-        padding: 5px;
+    th,
+    td {
         border: 1px solid #ccc;
+        padding: .313rem;
         vertical-align: top;
     }
+    
     th {
         background-color: #efe;
-        font-weight: bold;
+        font-weight: 700;
     }
+    
     td {
         white-space: pre-line;
     }
