Allow vendor and order commission to be edited.

--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -19,6 +19,11 @@
             <span class="help-block">Use a comma to separate misspellings.</span>
         </div>
 
+        <div class="form-group">
+            <label for="city_pantry_commission">City Pantry commission %</label>
+            <input class="form-control input-lg" id="city_pantry_commission" type="text" ng-model="vendor.cityPantryCommission" />
+        </div>
+
         <input class="btn btn-primary btn-lg" type="submit" value="Save">
     </form>
 </div>
