--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -113,6 +113,11 @@
                 <input class="form-control input-lg" id="total_amount" type="text" readonly ng-model="order.totalAmount" format-currency />
             </div>
 
+            <div class="form-group">
+                <label for="city_pantry_commission">City Pantry commission %</label>
+                <input class="form-control input-lg" id="city_pantry_commission" type="text" ng-model="order.cityPantryCommission" />
+            </div>
+
             <input class="btn btn-primary btn-lg" type="submit" value="Save" />
         </fieldset>
     </form>
