Move all ng-grid files to same folder.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -1,7 +1,7 @@
 @import 'lib/bootstrap-theme.scss';
 @import 'lib/bootstrap.scss';
 @import 'lib/datepicker.scss';
-@import 'lib/ui-grid-unstable.scss';
+@import '../lib/ng-grid/ui-grid.scss';
 
 body {
     background: #fff;
