--- a/src/web/templates/admin/orders.html
+++ b/src/web/templates/admin/orders.html
@@ -2,9 +2,9 @@
     <h1>Orders</h1>
 
     <p>
-        <button ng-click="showOrdersPlacedToday()" class="show-orders-placed-today">Show orders placed today</button>
+        <button ng-click="showOrdersPlacedToday()" class="show-orders-placed-today btn btn-primary">Show orders placed today</button>
         &nbsp;
-        <button ng-click="showOrdersDeliveredToday()" class="show-orders-delivered-today">Show orders delivered today</button>
+        <button ng-click="showOrdersDeliveredToday()" class="show-orders-delivered-today btn btn-primary">Show orders delivered today</button>
     </p>
 
     <div ui-grid="orders.gridOptions" ui-grid-pagination id="orders-table"></div>
