Allow admin to edit order custom dietary requirements and delivery instruction.

--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -95,7 +95,7 @@
 
             <div class="form-group">
                 <label for="delivery_instructions">Delivery instructions</label>
-                <textarea class="form-control input-lg" id="delivery_instructions" readonly rows="1" ng-model="order.deliveryInstruction"></textarea>
+                <textarea class="form-control input-lg" id="delivery_instructions" rows="3" ng-model="order.deliveryInstruction"></textarea>
             </div>
 
             <div class="form-group">
@@ -112,7 +112,7 @@
 
             <div class="form-group">
                 <label for="dietary_requirements">Dietary requirements</label>
-                <textarea class="form-control input-lg" id="dietary_requirements" readonly rows="3" ng-model="order.customDietaryRequirements"></textarea>
+                <textarea class="form-control input-lg" id="dietary_requirements" rows="3" ng-model="order.customDietaryRequirements"></textarea>
             </div>
 
             <div class="form-group">
