--- a/app/Resources/views/nav/vendor.html.twig
+++ b/app/Resources/views/nav/vendor.html.twig
@@ -3,6 +3,7 @@
 
     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
         <li role="presentation"><a tabindex="-1" href="/vendor-portal/orders" role="menuitem">Orders</a></li>
+        <li role="presentation"><a tabindex="-1" href="/vendor-portal/addresses" role="menuitem">Addresses</a></li>
         <li role="presentation"><a tabindex="-1" href="/vendor/admin/profile" role="menuitem">Profile</a></li>
         <li role="presentation"><a tabindex="-1" href="/vendor/admin/packages" role="menuitem">Packages</a></li>
         <li role="presentation"><a tabindex="-1" href="/vendor/admin/create_package" role="menuitem">Create package</a></li>
