--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2661,6 +2661,11 @@ label {
 
 .btn-primary {
     background-color: #2e8272;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
 }
 
 .btn-primary:hover,
