--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2999,4 +2999,4 @@ fieldset[disabled] .btn-primary.active {
 @import 'admin/customers.scss';
 @import 'admin/general.scss';
 @import 'admin/orders.scss';
-@import 'vendor-portal/orders.scss';
+@import 'vendor/orders.scss';
