Fixes to conform to API specification.

--- a/src/web/scss/form.scss
+++ b/src/web/scss/form.scss
@@ -1,10 +1,14 @@
 form {
     margin-bottom: 1.5rem;
-    
+
     .form-element-invalid {
         color: #df533a;
     }
-    
+
+    .form-group[ng-repeat] {
+        margin-bottom: .317rem;
+    }
+
     .form-group legend {
         border: 0;
         color: #444;
@@ -15,6 +19,7 @@ form {
 
 .angular-google-map-container {
     height: 400px;
+    margin-bottom: .75rem;
 }
 
 .form-error {
