Don't store the delivery contact mobile number.
Stu has said askig for this number is out of the
question because the delivery driver might be
different for each order.

--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -35,8 +35,7 @@
         <li ng-repeat="address in vendor.addresses">
             {{ address | addressSingleLineFormatter }}<br />
             Landline: {{ address.landlineNumber }}<br />
-            Order notification mobile: {{ address.orderNotificationMobileNumber }}<br />
-            Delivery contact mobile: {{ address.deliveryContactMobileNumber }}
+            Order notification mobile: {{ address.orderNotificationMobileNumber }}
         </li>
     </ul>
 
