--- a/src/web/templates/admin/customers.html
+++ b/src/web/templates/admin/customers.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wide-wrapper">
     <h1>Customers</h1>
 
     <div ui-grid="gridOptions" ui-grid-pagination id="customers-table"></div>
