--- a/src/web/templates/admin/packages.html
+++ b/src/web/templates/admin/packages.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wide-wrapper">
     <h1>Packages</h1>
 
     <div ui-grid="packages.gridOptions" ui-grid-pagination id="packages-table"></div>
