--- a/src/web/templates/admin/courier-orders.html
+++ b/src/web/templates/admin/courier-orders.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wide-wrapper">
     <h1>Courier Orders</h1>
 
     <div ui-grid="gridOptions" ui-grid-pagination id="courier-orders-table"></div>
