--- a/src/web/templates/admin/users.html
+++ b/src/web/templates/admin/users.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wide-wrapper">
     <h1>Users</h1>
 
     <div ui-grid="gridOptions" ui-grid-pagination id="users-table"></div>
