--- a/src/web/templates/admin/vendors.html
+++ b/src/web/templates/admin/vendors.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wide-wrapper">
     <h1>Vendors</h1>
 
     <div ui-grid="vendors.gridOptions" ui-grid-pagination id="vendors-table"></div>
