Install angular-slider.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'lib/bootstrap.scss';
 @import 'lib/datepicker.scss';
 @import '../lib/ng-grid/ui-grid.scss';
+@import '../lib/angular-slider/angular-slider.scss';
 
 body {
     background: #fff;
