Search page - max budget filter.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2997,4 +2997,5 @@ fieldset[disabled] .btn-primary.active {
 @import 'admin/customers.scss';
 @import 'admin/general.scss';
 @import 'admin/orders.scss';
+@import 'customer/search.scss';
 @import 'vendor/orders.scss';
