Use Google Maps API key from parameters.yml instead of hard-coding.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,6 +71,7 @@
 
         <script>
             window.hubspotBase = '{{ hubspotBase }}';
+            window.googleMapsJavascriptApiV3Key = '{{ googleMapsJavascriptApiV3Key }}';
         </script>
 
         <script src="/dist/js/built.js"></script>
