Search by date filter.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'lib/datepicker.scss';
 @import '../lib/ng-grid/ui-grid.scss';
 @import '../lib/angular-slider/angular-slider.scss';
+@import '../lib/angular-ui-datepicker.scss';
 
 body {
     background: #fff;
