--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -3,10 +3,13 @@
         <h3 class="sr-only">Filter</h3>
 
         <form class="filter-form" role="form">
-            <!-- @todo - Date filter. -->
             <div class="form-group">
-                <label for="date">Date</label>
-                <input class="form-control input-lg" name="date" type="date" placeholder="DD/MM/YYYY" />
+                <label for="date" ng-click="openDatePicker($event)">Date</label>
+
+                <input type="text" class="form-control input-lg" datepicker-popup="dd MMMM yyyy"
+                    ng-model="pickedDate" datepicker-mode="day" year-range="2"
+                    datepicker-options="{showButtonBar: false, showWeeks: false, startingDay: 1}"
+                    is-open="isDatePickerOpen" ng-click="openDatePicker($event)" />
             </div>
 
             <div class="form-group">
