Search by event type filter.

--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -40,21 +40,20 @@
                 </p>
             </div>
 
-            <!-- @todo - Event type filter. -->
             <h4 ng-show="eventTypes.length > 0">Package type</h4>
 
             <ul class="nav" ng-show="eventTypes.length > 0">
                 <li ng-repeat="eventType in eventTypes">
-                    <a>
+                    <a ng-click="search.eventType = eventType">
                         {{ eventType.name }}
                         <span>{{ eventType.searchResultsCount }}</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="filter-selected">
-                <span>@todo</span>
-                <button class="close" type="button">×</button>
+            <div class="filter-selected event-type-filter-selected" ng-show="search.eventType">
+                <span>{{ search.eventType.name }}</span>
+                <button class="close" type="button" ng-click="search.eventType = null">×</button>
             </div>
 
             <!-- @todo - Cuisine type filter. -->
