--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -56,21 +56,20 @@
                 <button class="close" type="button" ng-click="search.eventType = null">×</button>
             </div>
 
-            <!-- @todo - Cuisine type filter. -->
             <h4 ng-show="cuisineTypes.length > 0">Cuisine</h4>
 
             <ul class="nav" ng-show="cuisineTypes.length > 0">
                 <li ng-repeat="cuisineType in cuisineTypes">
-                    <a>
+                    <a ng-click="search.cuisineType = cuisineType">
                         {{ cuisineType.name }}
                         <span>{{ cuisineType.searchResultsCount }}</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="filter-selected">
-                <span>@todo</span>
-                <button class="close" type="button">×</button>
+            <div class="filter-selected cuisine-type-filter-selected" ng-show="search.cuisineType">
+                <span>{{ search.cuisineType.name }}</span>
+                <button class="close" type="button" ng-click="search.cuisineType = null">×</button>
             </div>
         </section>
     </div>
